--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,7 +6,7 @@
 <div class="divider"></div>
 <div class="section">  
   <a href="/auth/google" class="btn red darken-1">
-    <i class="fab fa-google"></i>
+    <i class="fab fa-google left"></i>
     Login with Google
   </a>
 </div>
