added a sidenav bar with materilize

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,6 +18,7 @@
     <title>Blog</title>
   </head>
   <body>
+    {{> _header}}
     <div class='container'>
       {{{body}}}
     </div>
@@ -25,5 +26,8 @@
     <script
       src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'
     ></script>
+    <script>
+      M.Sidenav.init(document.querySelectorAll('.sidenav'));
+    </script>
   </body>
 </html>
