--- a/views/blog/add.hbs
+++ b/views/blog/add.hbs
@@ -27,7 +27,7 @@
 
     <div class="row">
       <input type="submit" value="Save" class="btn">
-      <a href="/api/v1/dashboard" clas="btn orange">Cancel</a>
+      <a href="/api/v1/dashboard" class="btn orange">Cancel</a>
     </div>
   </form>
 </div>
