--- a/views/partials/_add_button.hbs
+++ b/views/partials/_add_button.hbs
@@ -1,3 +1,3 @@
 <div class="fixed-action-btn">
-  <a href="/blogs/add" class="btn-floating btn-large waves-effect waves-light waves-light red" ><i class="fas fa-plus"></i></a> 
+  <a href="/api/v1/blogs/add" class="btn-floating btn-large waves-effect waves-light waves-light red" ><i class="fas fa-plus"></i></a> 
 </div>
