added FormSelect to #status to fix the layout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -29,6 +29,7 @@
     ></script>
     <script>
       M.Sidenav.init(document.querySelectorAll('.sidenav'));
+      M.FormSelect.init(document.querySelectorAll('#status'));
     </script>
   </body>
 </html>
