--- a/views/blog/add.hbs
+++ b/views/blog/add.hbs
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="input-field">
         <h4>Add new blog</h4>
-        <textarea name="" id="body" cols="30" rows="10"></textarea>
+        <textarea name="body" id="body" cols="30" rows="10"></textarea>
       </div>
     </div>
 
