added post request so users can create new blog

--- a/views/blog/add.hbs
+++ b/views/blog/add.hbs
@@ -1,9 +1,9 @@
 <h3>Add Blog</h3>
 <div class="row">
-  <form action="/blogs" method="POST" class="col s12">
+  <form action="/api/v1/blogs" method="POST" class="col s12">
     <div class="row">
       <div class="input-field">
-        <input type="text" id="title" name="'title">
+        <input type="text" id="title" name="title">
         <label for="title">Title</label>
       </div>
     </div>
