--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -4,7 +4,7 @@
     <a href="#!" class="brand-logo center">Blog</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
     <ul class='sidenav' id="mobile-demo">
-      <li><a href="/api/v1/blog">Public Blog</a></li>
+      <li><a href="/api/v1/blogs">Public Blog</a></li>
       <li><a href="/api/v1/dashboard">Dashboard</a></li>
       <li><a href="/api/v1/login">Logout</a></li>
     </ul>
