--- a/views/blog/index.hbs
+++ b/views/blog/index.hbs
@@ -5,11 +5,11 @@
     <div class='col s12 m4'>
       <div class='card'>
         <div class='card-image'>
-
+           {{editIcon user ../user _id }}
         </div>
         <div class='card-content center-align'>
           <h5>{{title}}</h5>
-          <p>{{body}}</p>
+          <p>{{stripTags (truncate body 100)}}</p>
           <br />
           <div class='chip'>
             <img src='{{user.image}}' alt='user-image' />
