added features so that edit page will have the contents from the origin post

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -17,7 +17,7 @@
     <tbody>
       {{#each blogs}}
         <tr>
-          <td><a href="/blogs{{_id}}">{{title}}</a></td>
+          <td><a href="/api/v1/blogs{{_id}}">{{title}}</a></td>
           <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
           <td><span class="dash-status">{{status}}</span></td>
           <td></td>
