--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -20,7 +20,11 @@
           <td><a href="/api/v1/blogs{{_id}}">{{title}}</a></td>
           <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
           <td><span class="dash-status">{{status}}</span></td>
-          <td></td>
+          <td>
+            <a href="/api/v1/blogs/edit/{{_id}}" class="btn btn-float">
+            <i class="fas fa-edit fa-small"></i></a>
+            
+          </td>
         </tr>
       {{/each}}
     </tbody>
