--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -3,9 +3,8 @@
 <h3>Welcome {{name}}</h3>
 <p>Here are your blogs</p>
 
-
 {{#if blogs}}
-  <table class="striped">
+  <table class='striped'>
     <thead>
       <tr>
         <th>Title</th>
@@ -17,13 +16,22 @@
     <tbody>
       {{#each blogs}}
         <tr>
-          <td><a href="/api/v1/blogs{{_id}}">{{title}}</a></td>
+          <td><a href='/api/v1/blogs/{{blog._id}}'>{{title}}</a></td>
           <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
-          <td><span class="dash-status">{{status}}</span></td>
+          <td><span class='dash-status'>{{status}}</span></td>
           <td>
-            <a href="/api/v1/blogs/edit/{{_id}}" class="btn btn-float">
-            <i class="fas fa-edit fa-small"></i></a>
-            
+            <a href='/api/v1/blogs/edit/{{_id}}' class='btn btn-float'>
+              <i class='fas fa-edit fa-small'></i></a>
+            <form
+              action='/api/v1/blogs/{{_id}}'
+              method='POST'
+              id='delete-form'
+            >
+              <input type='hidden' name='_method' value='DELETE' />
+              <button class='btn red' type='submit'  class='btn btn-float'>
+                <i class='fas fa-trash fa-small'></i></button>
+
+            </form>
           </td>
         </tr>
       {{/each}}
