added readmore link

--- a/views/blog/index.hbs
+++ b/views/blog/index.hbs
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="card-action center-align">
-          <a href="/blog/{{_id}}" class="btn grey">Read More</a>
+          <a href="/api/v1/blogs/{{_id}}" class="btn grey">Read More</a>
         </div>
       </div>
     </div>
